--- a/themes/hugo-casper3/layouts/partials/post-author.html
+++ b/themes/hugo-casper3/layouts/partials/post-author.html
@@ -1,13 +1,16 @@
+{{ $author := .Param "author" }}
 <ul class="author-list">
     <li class="author-list-item">
         <div class="author-card">
-            <div class="author-profile-image">{{- partial "icons/avatar.html" -}}</div>
+            <div class="author-profile-image">{{- partial "icons/avatar.html" (dict "author" $author) -}}
+            </div>
             <div class="author-info">
                 <div class="author-info">
                     <h2>{{ .Param "author" }}</h2>
                 </div>
             </div>
         </div>
-        <a href="#" class="author-avatar author-profile-image">{{- partial "icons/avatar.html" -}}</a>
+        <a href="#" class="author-avatar author-profile-image">{{- partial "icons/avatar.html" (dict "author" $author)
+            -}}</a>
     </li>
 </ul>
